# aeropupa

./: .dockerignore  .gitignore  README.md  compose.dev.yaml  compose.prod.yaml
aerotools/: logger.py  model_manager.py  settings.py
aerotools/detection/: api.py  service.py
aerotools/utils/: file_helper.py  geometry.py
backend/: Dockerfile  pyproject.toml
backend/aerotools/: app.py  logger.py  model_manager.py  settings.py
backend/aerotools/detection/: api.py  schemas.py  service.py
backend/aerotools/utils/: file_helper.py  geometry.py
backend/toolsets/: toolset-11.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: response.json
frontend/src/: App.tsx  Dropdown.tsx  main.css
frontend/src/components/detecting/: ControlsBar.tsx  ImagePreview.tsx  StatusBadge.tsx  ToolsTable.tsx
frontend/src/pages/: DetectingPage.tsx  MultiDetectPage.tsx
frontend/src/types/: detecting.ts
frontend/src/utils/: downloadJson.ts  imageCompress.ts
